tests/negative/regression/r35.orng
// r35.orng:8:18: error: expected a type
//     impl for main { }
//                 ^
// 
impl for () { } // The order matters here, this HAS to be first

fn main() -> Int {
    impl for main { }
    0
}